# serial-xfer

./: CLAUDE.md  Makefile  PROTOCOL.md  README.md  XFER.COM  dosbox-xfer.conf  host.py  log.md  mountfs.py  mountgui.py  pyproject.toml  run_dosbox.sh  test_com.py  xfercom.asm
docs/: CLAUDE.md  improvements.md
docs/wiki/: 8086-instruction-set.md  bare-metal-boot.md  bios-services.md  cobs-framing.md  crc-checks.md  debugging-dos-programs.md  dos-agent.md  dos-datetime-format.md  dos-int21-api.md  host-tool.md  index.md  log.md  mount-fs.md  mountgui.md  msdos-bios-modules.md  msdos-commands.md  msdos-data-structures.md  msdos-device-drivers.md  msdos-fat16-format.md  msdos-kernel-modules.md  msdos-v4-architecture.md  protocol-versioning.md  wire-protocol.md  x86-16bit-cpu.md  x86-real-mode.md
docs/wiki/sources/: nasm-manual.md  osdev-articles.md  programming-8086-8088.md  ralf-brown-interrupt-list.md
